--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "skeleton",
     "parallax"
   ],
-  "license": "GPLv3",
+  "license": "MIT",
   "readmeFilename": "README.md",
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.8.9",
-    "gulp-clean": "~0.3.1",
-    "gulp-util": "~3.0.1",
-    "gulp-sass": "~1.2.1",
-    "gulp-concat": "~2.4.1",
-    "gulp-jade": "~0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-jade": "^1.1.0",
     "gulp-jshint": "~1.8.6",
     "gulp-minify-css": "~0.3.11",
     "gulp-rename": "~1.2.0",
+    "gulp-sass": "^2.3.2",
     "gulp-sftp": "~0.1.3",
     "gulp-uglify": "~1.0.1",
+    "gulp-util": "~3.0.1",
     "run-sequence": "^0.3.6"
   }
 }
